# FO4_Plugins

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Scrap.md  deploy-project.mjs  pack-project.sh  task-gen.mjs
ConsoleHistory/: README.md
Interface/Shared/: GlobalFunc.as  IMenu.as  QuantityMenuNEW.as
Interface/Shared/AS3/: BSButtonHint.as  BSButtonHintBar.as  BSButtonHintData.as  BSScrollingList.as
Interface/Shared/AS3/COMPANIONAPP/: MobileButtonHint.as
Interface/TextInputMenu/: DOMDocument.xml  PublishSettings.xml
Interface/fex/: StupidINI.as
Projects/ConsoleHistory/include/: console.hpp
Projects/fex/: README.md  project.ppj
Projects/fex/Scripts/Source/User/: fex.psc
Projects/fex/Scripts/Source/User/fex/: debug.psc  game.psc  log.psc  settings.psc
include/: events-input.hpp  events-quickcontainer.hpp  events-viewcaster.hpp  events.hpp  internal.hpp  load-handler.hpp  menu-base.hpp  menu-text-input.hpp  papyrus.hpp  pch.h  scrap-scrap.hpp  util.hpp
include/ConsoleHistory/: console.hpp  project-main.hpp
include/RotatingSaves/: project-main.hpp
include/fex/: load-handler.hpp  papyrus-logging.hpp  papyrus-settings.hpp  project-main.hpp
src/: main.cpp
